# Text_summerizer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requrements.txt  setup.py  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  Text_Summarization.ipynb  data_validation.ipynb  trails.ipynb
src/textSummerizer/conifig/: configuration.py
src/textSummerizer/entity/: __init__.py
src/textSummerizer/logging/: __init__.py
src/textSummerizer/utils/: common.py
