[tool.poetry]
name = "text-summerizer"
version = "0.1"
description = "This is a Project of Summerizing the Text Using Transfer Learning"
authors = ["akashdasp <akash.dasp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "text_summerizer"}]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.5.4"
sklearn = "^0.0.post5"
pandas = "^2.0.3"
numpy = "^1.25.0"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
